# nixstore

./: README.md  build.sh
.github/workflows/: release.yml
arch/: README.md  export-path.cc  generation.sh  import-dir.cc  import-path.cc  rm-path.cc
arch/iso/: flashdisk.sh  initcpio-hook-nixgen  mkbootdisk.sh  nixgen-commit  nixgen-update  setup-boot.sh
arch/nixgen/: nixgen-commit  nixgen-help  nixgen-remove  nixgen-savemeta  nixgen-status  nixgen-update
arch/tests/: update-test.sh
bench/: bench-ab.cc  bench-import.cc  bench-optimise.cc
examples/: README.md
src/libstore/: gc.cc  globals.cc  local-store.cc  meson.build  store-api.cc
src/libstore-c/: nix_api_store.cc
src/libstore/include/nix/store/: globals.hh  local-settings.hh  local-store.hh  meson.build  store-api.hh  store-open.hh
src/libutil/: config-global.cc  configuration.cc  hash.cc  meson.build
src/libutil/include/nix/util/: config-impl.hh  configuration.hh  hash.hh  json-impls.hh  json-utils.hh  meson.build  signature.hh
tests/: import-hashes.cc  needed-drift.sh  parallel-optimise.cc
